syntax="proto3";

message TestRequest {
	string arg1 = 1;
}

message TestResponse {
	string message = 1;
}

service TestService {
	rpc Testing(TestRequest) returns (TestResponse);
}